# ftdi-mpsse

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: mpsse-macro.rs
