[package]
name = "ftdi-mpsse"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"
description = "Rust helpers for MPSSE engine on FTDI chips."
keywords = ["ftdi", "mpsse"]
license = "MIT"

[dependencies]
static_assertions = "^1.1.0"

[dev-dependencies]
libftd2xx = "~0.31.0"
